colocando jwt e rota de busca por id
